sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	var ecart:Int = getNombreValeurs();
	var i:Int = 0;
	var hasSwap:boolean = false;
	do 
	{
		hasSwap = false;
		if (ecart > 1)
		{
			ecart = (ecart.toDouble /1.3).toInt;
		}
		while(i+ecart< getNombreValeurs())
		{
			if (plusPetit(i,i+ecart))
				{
					echange(i+ecart,i);
					hasSwap = true;
				}
			i++;
		}
 tant que l'écart est plus grand que 1 ou que le dernier parcours a inversé au moins un élément
	}while( ecart >1 || hasSwap = false)
}
